--- a/.github/workflows/profile-summary-cards.yml
+++ b/.github/workflows/profile-summary-cards.yml
@@ -1,7 +1,7 @@
 name: GitHub-Profile-Summary-Cards
 
 on:
-  schedule: # execute every 24 hours
+  schedule: # Execute on Mondays and Thursdays at 0:00(UTC)
     - cron: '0 0 * * 1,4'
   workflow_dispatch:
 
